classic-grammar.txt
Insert: 'INSERT' 'INTO' Identifier 'VALUES' '(' Expressions ')'
Expressions: Expressions ',' Expression
Expressions: Expression
Expression: Comparison
Comparison: Comparison '=' Additive
Comparison: Additive
Additive: Additive '-' Multiplicative
Additive: Multiplicative
Multiplicative: Multiplicative '%' Primary
Multiplicative: Multiplicative '/' Primary
Multiplicative: Primary
Primary: '(' Select ')'
Primary: Number
Primary: Identifier
Primary: '(' Expression ')'
Select: 'SELECT' Expression 'WHERE' Expression
Select: 'SELECT' Expression
# Стартовый нетерминал: Insert
# Нетерминалы: Insert, Expressions, Expression, Comparison, Additive, Multiplicative, Primary, Select
# Терминалы: 'INSERT', 'INTO', Identifier, 'VALUES', '(', ')', ',', '=', '-', '%', '/', Number, 'SELECT', 'WHERE'
